# cute-copter

./: Cargo.toml  README.md  imu-0.sal  todo
.cargo/: config
.github/workflows/: rust.yml
src/: error.rs  main.rs  parameter.rs  state_machine.rs  test_imu.rs
