[package]
name = "cute-copter"
categories = ["embedded", "no-std"]
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = "Minimal drone flight controller"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
cortex-m-rtic = "1.0.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
systick-monotonic = "1.0.0"
nrf24-rs = "0.1.1"
pid-loop = "0.0.6"
mpu6050-dmp = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.8.0"
features = ["rt", "stm32f103", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "cute-copter"
test = false
bench = false

[profile.dev]
opt-level = "s"
codegen-units = 16
debug = true
lto = true

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
