[package]
name = "cute-copter"
categories = ["embedded", "no-std"]
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = "Minimal drone flight controller"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "bin/blinky.rs"
name = "blinky"

[dependencies]
embedded-hal = "0.2.7"
nrf24-rs = "0.1.1"
pid-loop = "0.0.6"
mpu6050-dmp = { git = "https://github.com/barafael/mpu6050-dmp" }
#mpu6050-dmp = { path = "../mpu6050-dmp" }
#cute-copter-config-proto = { path = "../cute-copter-config-proto" }
cute-copter-config-proto = { git = "https://github.com/barafael/cute-copter-config-proto" }
postcard = "0.7.3"
heapless = "0.7.16"
cortex-m-rt = "0.7.1"
cortex-m = "0.7.6"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "cute-copter"
test = false
bench = false

[profile.dev]
opt-level = "s"
codegen-units = 16
debug = true
lto = true

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
